fixed cropping issues of canvas and grid

--- a/src/components/CircuitBuilder/CircuitArrangement/Canvas/Canvas.module.scss
+++ b/src/components/CircuitBuilder/CircuitArrangement/Canvas/Canvas.module.scss
@@ -1,10 +1,8 @@
-
 .canvas {
-  align-items: center;
   position: absolute;
   margin-left: 46px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
-  width: 100%;
+  width: calc(100% - 46px);
   height: 100%;
   background: white;
   z-index: 0;
