--- a/src/components/CircuitBuilder/CircuitArrangement/CircuitArrangement.module.scss
+++ b/src/components/CircuitBuilder/CircuitArrangement/CircuitArrangement.module.scss
@@ -9,6 +9,6 @@
   flex-direction: row;
   background: white;
   height: 100%;
-  width: 95%;
+  width: calc(100% - 17px);
 
 }
