--- a/src/components/CircuitBuilder/CircuitArrangement/Grid/Grid.module.scss
+++ b/src/components/CircuitBuilder/CircuitArrangement/Grid/Grid.module.scss
@@ -1,5 +1,7 @@
 .grid {
+  position: absolute;
   width: 100%;
   height: 100%;
+
   z-index: 1;
 }
